fixed clipping of error text

--- a/blocks/pop-up/__form-field/pop-up__form-field.css
+++ b/blocks/pop-up/__form-field/pop-up__form-field.css
@@ -1,5 +1,5 @@
 .pop-up__form-field {
-  margin: 30px auto 0;
+  margin: 0 auto;
   display: block;
   position: relative;
   width: 238px;
