--- a/blocks/pop-up/__save-button/pop-up__save-button.css
+++ b/blocks/pop-up/__save-button/pop-up__save-button.css
@@ -1,7 +1,7 @@
 .pop-up__save-button {
   width: 238px;
   height: 46px;
-  margin: 45px auto 25px;
+  margin: 18px auto 25px;
   display: block;
   padding: 0;
   background-color: black;
